WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273186
[visionOS] Fix build issue and re-baseline layer based tests
https://bugs.webkit.org/show_bug.cgi?id=273186
Summary
[visionOS] Fix build issue and re-baseline layer based tests
Etienne
Reported
2024-04-24 07:06:37 PDT
Fix build issue and re-baseline layer based tests
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-24 07:06:56 PDT
<
rdar://problem/126984383
>
Etienne
Comment 2
2024-04-24 07:11:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27689
EWS
Comment 3
2024-04-24 09:07:32 PDT
Committed
277927@main
(9706f30b429b): <
https://commits.webkit.org/277927@main
> Reviewed commits have been landed. Closing PR #27689 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug