[visionOS] Fix build issue and re-baseline layer based tests https://bugs.webkit.org/show_bug.cgi?id=273186 rdar://126984383

Reviewed by Mike Wyrzykowski.

Add the missing include to fix the build failure and re-baseline layer
tests (again).

* Source/WebCore/rendering/EventRegion.h:
Unified sources fun, prevent `explicit specialization after instantiation`
error on IntRect hashes.

* LayoutTests/interaction-region/interaction-layers-culling-expected.txt:
* LayoutTests/interaction-region/interaction-layers-culling-layer-type-change-expected.txt:
* LayoutTests/interaction-region/layer-tree-expected.txt:
* LayoutTests/interaction-region/layer-tree-shape-reset-expected.txt:
* LayoutTests/overlay-region/fixed-node-updates-expected.txt:
* LayoutTests/overlay-region/full-page-dynamic-expected.txt:
* LayoutTests/overlay-region/full-page-expected.txt:
* LayoutTests/overlay-region/full-page-horizontal-expected.txt:
* LayoutTests/overlay-region/full-page-overflow-expected.txt:
* LayoutTests/overlay-region/full-page-overflow-scrolling-expected.txt:
* LayoutTests/overlay-region/full-page-overflow-snapping-expected.txt:
* LayoutTests/overlay-region/full-page-scrolling-expected.txt:
* LayoutTests/overlay-region/many-candidates-expected.txt:
* LayoutTests/overlay-region/map-expected.txt:
* LayoutTests/overlay-region/map-small-expected.txt:
* LayoutTests/overlay-region/overlay-element-expected.txt:
* LayoutTests/overlay-region/overlay-element-overflow-expected.txt:
* LayoutTests/overlay-region/snapping-expected.txt:
* LayoutTests/overlay-region/split-scrollers-expected.txt:
Re-baseline tests.

Canonical link: https://commits.webkit.org/277927@main